[package]
authors = ["Webb Technologies Inc."]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "pallet-token-wrapper-handler"
repository = "https://github.com/webb-tools/protocol-substrate"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive", "max-encoded-len"]}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
asset-registry = {package = "pallet-asset-registry", path = "../asset-registry", default-features = false}
webb-primitives = {path = "../../primitives", default-features = false}
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}
orml-traits = {path = "../../open-runtime-module-library/traits", default-features = false}
pallet-token-wrapper = { path = "../token-wrapper", default-features = false }
pallet-signature-bridge = { path = "../signature-bridge", default-features = false }
pallet-bridge = { path = "../bridge", default-features = false }
sp-arithmetic = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}

hex-literal = "0.3.4"

#Optional dependencies
frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", optional = true}

[dev-dependencies]
orml-currencies = {path = "../../open-runtime-module-library/currencies", default-features = false}
orml-tokens = {path = "../../open-runtime-module-library/tokens", default-features = false}
pallet-balances = {git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.17"}
pallet-treasury = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17"}
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}
webb-proposals = { version = "0.3.1", default-features = false, features = ["scale","substrate"] }


[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "orml-traits/std",
  "asset-registry/std",
  "webb-primitives/std",
  "frame-benchmarking/std",
  "sp-arithmetic/std",
  "pallet-token-wrapper/std",
  "pallet-bridge/std",
  "pallet-signature-bridge/std"
]

