[package]
authors = ["Webb Technologies Inc."]
description = "A pallet for maintaing wrapping relationships for various tokens."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "pallet-token-wrapper"
repository = "https://github.com/webb-tools/protocol-substrate"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"]}
scale-info = { version = "2.1.1", default-features = false, features = ["derive"]}

asset-registry = {package = "pallet-asset-registry", path = "../asset-registry", default-features = false}
webb-primitives = {path = "../../primitives", default-features = false}
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git",branch = "polkadot-v0.9.30", default-features = false }
sp-arithmetic = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

# Optional dependencies
frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", optional = true }

[dev-dependencies]
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.30", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.30", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.30" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "orml-traits/std",
  "webb-primitives/std",
  "frame-benchmarking/std",
  "asset-registry/std",
  "sp-arithmetic/std",
]
