[package]
authors = ["Webb Technologies Inc."]
description = "FRAME pallet for Webb anchor-handler."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "pallet-vanchor-handler"
repository = "https://github.com/webb-tools/protocol-substrate"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
serde = { version = "1.0.101", optional = true }

# frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.36", default-features = false }
pallet-asset-registry = { path = "../asset-registry", default-features = false }
pallet-linkable-tree = { path = "../linkable-tree", default-features = false }
pallet-mt = { path = "../mt", default-features = false }
pallet-vanchor = { path = "../vanchor", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
webb-primitives = { path = "../../primitives", default-features = false }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36", optional = true }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36", optional = true }

[dev-dependencies]
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
hex-literal = "0.3.4"
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.36", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.36", default-features = false }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
pallet-hasher = { path = "../hasher", default-features = false }
pallet-key-storage = { path = "../key-storage" }
pallet-linkable-tree = { path = "../linkable-tree", default-features = false }
pallet-mt = { path = "../mt", default-features = false }
pallet-signature-bridge = { path = "../signature-bridge", default-features = false }
pallet-token-wrapper = { path = "../token-wrapper", default-features = false }
pallet-vanchor-verifier = { path = "../vanchor-verifier", default-features = false }
serde = { version = "1.0.119" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
webb-primitives = { path = "../../primitives", default-features = false }

ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
arkworks-setups = { version = "1.2.1", features = ["r1cs"], default-features = false }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale", "substrate"] }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  "codec/std",
  "serde",
  "sp-std/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
  "sp-arithmetic/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-mt/std",
  "pallet-vanchor/std",
  "pallet-vanchor-verifier/std",
  "pallet-signature-bridge/std",
  "pallet-token-wrapper/std",
  "orml-traits/std",
  "webb-primitives/std",
  "pallet-asset-registry/std",
]
